--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -1,3 +1,11 @@
+body{
+	text-align: center;
+	background-color: black;
+	color: white;
+}
+
+
+
 /* **********************************************
 Basic mechanics
 Hide all paragraphs by default
@@ -21,6 +29,12 @@ Feel free to adjust the defaults to your needs.
 	font-style: italic;
 }
 
+.voice2{
+	font-style: Brenner Mono ;
+	font-weight: bold;
+	font-size:100px;
+}
+
 /* **********************************************
 The first paragraph, with extended timing for 
 	all siblings. Basically what it does is that
@@ -29,6 +43,10 @@ The first paragraph, with extended timing for
 	spoken.
 You probably want to change the styling.
 ********************************************** */
+
+.p0{
+	color:#ffffff;
+}
 .p0 span {
 	opacity: 0;
 	font-family: brenner;
@@ -37,6 +55,7 @@ You probably want to change the styling.
 	opacity: 1;
 	transition: 0s;
 	font-weight: 200;
+
 }
 .p0.on span:nth-of-type(2) {
 	opacity: 1;
@@ -94,3 +113,4 @@ You probably want to change the styling.
 	transition: 0s 3.7s;
 	font-family: "brenner slab";
 }
+
