--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -26,11 +26,11 @@ Feel free to adjust the defaults to your needs.
 	opacity: 0;
 }
 .voice1 {
-	font-style: italic;
+
 }
 
 .voice2{
-	font-style: Brenner Mono ;
+	
 	font-weight: bold;
 	font-size:100px;
 }
@@ -44,7 +44,8 @@ The first paragraph, with extended timing for
 You probably want to change the styling.
 ********************************************** */
 
-.p0{
+
+/*.p0{
 	color:#ffffff;
 }
 .p0 span {
@@ -112,5 +113,252 @@ You probably want to change the styling.
 	opacity: 1;
 	transition: 0s 3.7s;
 	font-family: "brenner slab";
+}
+*/
+
+
+.voice1 {
+	text-transform: uppercase;
+	font-family: Brenner Sans Condensed ;
+	font-weight: 900;
+	position: relative;
+	color: white;
+	font-size: 1.6em;
+	letter-spacing: 0.5em;
+   /* Animation provies a slight random skew. Check bottom of doc for more information on how to random skew. */
+	animation: glitch-skew 1s infinite linear alternate-reverse;
+}
+.voice1::before {
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	left: 2px;
+	text-shadow: -2px 0 #ff00c1;
+   /* Creates an initial clip for our glitch. This works in a typical top,right,bottom,left fashion and creates a mask to only show a certain part of the glitch at a time. */
+	clip: rect(44px, 450px, 56px, 0);
+   /* Runs our glitch-anim defined below to run in a 5s loop, infinitely, with an alternating animation to keep things fresh. */
+	animation: glitch-anim 5s infinite linear alternate-reverse;
+}
+.voice1::after {
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	left: -2px;
+	text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
+	animation: glitch-anim2 1s infinite linear alternate-reverse;
+}
+/* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
+@keyframes glitch-anim {
+	0% {
+		clip: rect(29px, 9999px, 65px, 0);
+		transform: skew(0.34deg);
+   }
+	5% {
+		clip: rect(3px, 9999px, 19px, 0);
+		transform: skew(0.66deg);
+   }
+	10% {
+		clip: rect(94px, 9999px, 26px, 0);
+		transform: skew(0.45deg);
+   }
+	15% {
+		clip: rect(30px, 9999px, 56px, 0);
+		transform: skew(0.58deg);
+   }
+	20% {
+		clip: rect(80px, 9999px, 97px, 0);
+		transform: skew(0.56deg);
+   }
+	25% {
+		clip: rect(75px, 9999px, 35px, 0);
+		transform: skew(0.64deg);
+   }
+	30% {
+		clip: rect(56px, 9999px, 97px, 0);
+		transform: skew(0.09deg);
+   }
+	35% {
+		clip: rect(64px, 9999px, 16px, 0);
+		transform: skew(0.76deg);
+   }
+	40% {
+		clip: rect(39px, 9999px, 61px, 0);
+		transform: skew(0.69deg);
+   }
+	45% {
+		clip: rect(64px, 9999px, 82px, 0);
+		transform: skew(0.33deg);
+   }
+	50% {
+		clip: rect(22px, 9999px, 34px, 0);
+		transform: skew(0.58deg);
+   }
+	55% {
+		clip: rect(78px, 9999px, 41px, 0);
+		transform: skew(0.8deg);
+   }
+	60% {
+		clip: rect(84px, 9999px, 23px, 0);
+		transform: skew(0.12deg);
+   }
+	65% {
+		clip: rect(80px, 9999px, 15px, 0);
+		transform: skew(0.91deg);
+   }
+	70% {
+		clip: rect(30px, 9999px, 94px, 0);
+		transform: skew(0.9deg);
+   }
+	75% {
+		clip: rect(70px, 9999px, 61px, 0);
+		transform: skew(0.5deg);
+   }
+	80% {
+		clip: rect(100px, 9999px, 78px, 0);
+		transform: skew(0.78deg);
+   }
+	85% {
+		clip: rect(25px, 9999px, 90px, 0);
+		transform: skew(0.47deg);
+   }
+	90% {
+		clip: rect(38px, 9999px, 89px, 0);
+		transform: skew(0.69deg);
+   }
+	95% {
+		clip: rect(66px, 9999px, 12px, 0);
+		transform: skew(0.12deg);
+   }
+	100% {
+		clip: rect(41px, 9999px, 18px, 0);
+		transform: skew(0.44deg);
+   }
+}
+@keyframes glitch-anim2 {
+	0% {
+		clip: rect(94px, 9999px, 82px, 0);
+		transform: skew(0.37deg);
+   }
+	5% {
+		clip: rect(50px, 9999px, 17px, 0);
+		transform: skew(0.86deg);
+   }
+	10% {
+		clip: rect(52px, 9999px, 18px, 0);
+		transform: skew(0.93deg);
+   }
+	15% {
+		clip: rect(69px, 9999px, 93px, 0);
+		transform: skew(0.71deg);
+   }
+	20% {
+		clip: rect(43px, 9999px, 48px, 0);
+		transform: skew(0.95deg);
+   }
+	25% {
+		clip: rect(5px, 9999px, 54px, 0);
+		transform: skew(0.57deg);
+   }
+	30% {
+		clip: rect(33px, 9999px, 53px, 0);
+		transform: skew(0.65deg);
+   }
+	35% {
+		clip: rect(48px, 9999px, 37px, 0);
+		transform: skew(0.57deg);
+   }
+	40% {
+		clip: rect(66px, 9999px, 1px, 0);
+		transform: skew(0.65deg);
+   }
+	45% {
+		clip: rect(21px, 9999px, 35px, 0);
+		transform: skew(0.88deg);
+   }
+	50% {
+		clip: rect(76px, 9999px, 14px, 0);
+		transform: skew(0.37deg);
+   }
+	55% {
+		clip: rect(35px, 9999px, 12px, 0);
+		transform: skew(0.34deg);
+   }
+	60% {
+		clip: rect(87px, 9999px, 71px, 0);
+		transform: skew(0.59deg);
+   }
+	65% {
+		clip: rect(3px, 9999px, 86px, 0);
+		transform: skew(0.79deg);
+   }
+	70% {
+		clip: rect(97px, 9999px, 5px, 0);
+		transform: skew(0.49deg);
+   }
+	75% {
+		clip: rect(86px, 9999px, 84px, 0);
+		transform: skew(1deg);
+   }
+	80% {
+		clip: rect(46px, 9999px, 100px, 0);
+		transform: skew(0.36deg);
+   }
+	85% {
+		clip: rect(56px, 9999px, 97px, 0);
+		transform: skew(0.85deg);
+   }
+	90% {
+		clip: rect(21px, 9999px, 60px, 0);
+		transform: skew(0.62deg);
+   }
+	95% {
+		clip: rect(59px, 9999px, 40px, 0);
+		transform: skew(0.42deg);
+   }
+	100% {
+		clip: rect(60px, 9999px, 60px, 0);
+		transform: skew(0.79deg);
+   }
+}
+@keyframes glitch-skew {
+	0% {
+		transform: skew(1deg);
+   }
+	10% {
+		transform: skew(4deg);
+   }
+	20% {
+		transform: skew(5deg);
+   }
+	30% {
+		transform: skew(-4deg);
+   }
+	40% {
+		transform: skew(-1deg);
+   }
+	50% {
+		transform: skew(0deg);
+   }
+	60% {
+		transform: skew(3deg);
+   }
+	70% {
+		transform: skew(-4deg);
+   }
+	80% {
+		transform: skew(4deg);
+   }
+	90% {
+		transform: skew(-1deg);
+   }
+	100% {
+		transform: skew(3deg);
+   }
 }
 
