--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -2,6 +2,7 @@ body{
 	text-align: center;
 	background-color: black;
 	color: white;
+	background-image: url(https://media.giphy.com/media/OVlFjmEDhx9rG/giphy.gifs);
 }
 
 
