--- a/closed-captions/test.css
+++ b/closed-captions/test.css
@@ -1,258 +1,344 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100');
- html, body, h1 {
-	 padding: 0;
-	 margin: 0;
-     font-family: 'Montserrat', sans-serif;
-     background: #0a0a0a;
+/* **********************************************
+Basic mechanics
+Hide all paragraphs by default
+Show them when they receive the class 'on'
+Hide them when they receive the class 'off'
+Feel free to adjust the defaults to your needs.
+********************************************** */
+#closed-captions p {
+	opacity: 0;
+	transition: .05s;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+#closed-captions .on {
+	opacity: 1;
+}
+#closed-captions .off {
+	transition: .2s;
+	opacity: 0;
+}
+body {
+	background-color: #141414;
+	margin-top: 75px;
+}
+div, iframe {
+	display: block;
+	margin: 0 auto;
+}
+.voice1 {
+	font-family: "brenner sans medium";
+	font-style: italic;
+	font-size: 22px;
+	color: #E04D48;
+}
+.voice2 {
+	font-family: "brenner sans medium";
+	font-size: 22px;
+	color: #C5C6D0;
+	margin-top: 50px;
+}
+.voice3 {
+	font-family: "brenner sans medium";
+	font-style: italic;
+	font-size: 22px;
+	color: orange;
+}
+.voice4 {
+	font-family: "brenner mono";
+	font-size: 22px;
+	color: #C5C6D0;
+}
+.circle {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border-left: 5px solid #FFFFFF;
+	background-color: transparent;
+	position: relative;
+	bottom: 440px;
+	left: 360px;
+	transform: rotate(45deg);
+}
+.sound1 {
+	animation-duration: 2s;
+	animation-name: alarm;
+	animation-timing-function: ease-out;
+}
+@keyframes alarm {
+	0% {
+		background-color: #420C09;
+		transform: rotate(1deg);
+	}
+	5% {
+		transform: rotate(-1deg);
+	}
+	10%{
+		transform: rotate(0deg);
+	}
+	15% {
+		transform: rotate(1deg);
+	}
+	20% {
+		transform: rotate(-1deg);
+	}
+	25% {
+		transform: rotate(0deg);
+	}
+	100% {
+		background-color: #141414;
+	}
+}
+.sound2 {
+	animation-duration: 2s;
+	animation-name: alarm-2;
+	animation-timing-function: ease-out;
+}
+@keyframes alarm-2 {
+	0% {
+		background-color: #420C09;
+	}
+	100% {
+		background-color: #141414;
+	}
+}
+.sound3 {
+	animation-duration: 2s;
+	animation-name: alarm-3;
+	animation-timing-function: ease-out;
+}
+@keyframes alarm-3 {
+	0% {
+		transform: scale(1.0);
+	}
+	50% {
+		transform: scale(1.05);
+	}
+	100% {
+		transform: scale(1.0);
+	}
+}
+.sound4 {
+	animation-duration: 2s;
+	animation-name: peep;
+	animation-timing-function: ease-out;
+}
+@keyframes peep {
+	0% {
+		background-color: #420C09;
+		transform: rotate(.5deg);
+	}
+	5% {
+		transform: rotate(-.5deg);
+	}
+	10%{
+		transform: rotate(0deg);
+	}
+	15% {
+		transform: rotate(.5deg);
+	}
+	20% {
+		transform: rotate(-.5deg);
+	}
+	25% {
+		transform: rotate(0deg);
+	}
+	100% {
+		background-color: #141414;
+	}
+}
+/* **********************************************
+The first paragraph, with extended timing for
+	all siblings. Basically what it does is that
+	it shows the text after a delay, which
+	corresponds with the time that the word is
+	spoken.
+You probably want to change the styling.
+********************************************** */
+.p0 span {
+	opacity: 0;
+}
+.p0.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+}
+.p0.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .4s;
+}
+.p0.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .5s;
+}
+.p0.on span:nth-of-type(4) {
+	opacity: 1;
+	transition: 0s .7s;
+}
+.p0.on span:nth-of-type(5) {
+	opacity: 1;
+	transition: 0s 1.1s;
+}
+.p0.on span:nth-of-type(6) {
+	opacity: 1;
+	transition: 0s 1.4s;
+}
+.p0.on span:nth-of-type(7) {
+	opacity: 1;
+	transition: 0s 1.7s;
+}
+.p0.on span:nth-of-type(8) {
+	opacity: 1;
+	transition: 0s 2s;
+}
+.p0.on span:nth-of-type(9) {
+	opacity: 1;
+	transition: 0s 3s;
+}
+.p0.on span:nth-of-type(10) {
+	opacity: 1;
+	transition: 0s 3.2s;
+}
+.p0.on span:nth-of-type(11) {
+	opacity: 1;
+	transition: 0s 3.7s;
 }
 
- #wrapper {
-	 text-align: center;
+
+.p1 span {
+	opacity: 0;
 }
- .sub {
-	 color: #64dcdc;
-	 letter-spacing: 1em;
+.p1.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
 }
-/* Our mixin positions a copy of our text directly on our existing text, while also setting content to the appropriate text set in the data-text attribute. */
- .glitch {
-	 position: relative;
-	 color: white;
-	 font-size: 4em;
-	 letter-spacing: 0.5em;
-	/* Animation provies a slight random skew. Check bottom of doc for more information on how to random skew. */
-	 animation: glitch-skew 1s infinite linear alternate-reverse;
+.p1.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .3s;
 }
- .glitch::before {
-	 content: attr(data-text);
-	 position: absolute;
-	 top: 0;
-	 left: 0;
-	 width: 100%;
-	 height: 100%;
-	 left: 2px;
-	 text-shadow: -2px 0 #ff00c1;
-	/* Creates an initial clip for our glitch. This works in a typical top,right,bottom,left fashion and creates a mask to only show a certain part of the glitch at a time. */
-	 clip: rect(44px, 450px, 56px, 0);
-	/* Runs our glitch-anim defined below to run in a 5s loop, infinitely, with an alternating animation to keep things fresh. */
-	 animation: glitch-anim 5s infinite linear alternate-reverse;
+
+.p2 span {
+	opacity: 0;
 }
- .glitch::after {
-	 content: attr(data-text);
-	 position: absolute;
-	 top: 0;
-	 left: 0;
-	 width: 100%;
-	 height: 100%;
-	 left: -2px;
-	 text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
-	 animation: glitch-anim2 1s infinite linear alternate-reverse;
+.p2.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
 }
-/* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
- @keyframes glitch-anim {
-	 0% {
-		 clip: rect(29px, 9999px, 65px, 0);
-		 transform: skew(0.34deg);
-	}
-	 5% {
-		 clip: rect(3px, 9999px, 19px, 0);
-		 transform: skew(0.66deg);
-	}
-	 10% {
-		 clip: rect(94px, 9999px, 26px, 0);
-		 transform: skew(0.45deg);
-	}
-	 15% {
-		 clip: rect(30px, 9999px, 56px, 0);
-		 transform: skew(0.58deg);
-	}
-	 20% {
-		 clip: rect(80px, 9999px, 97px, 0);
-		 transform: skew(0.56deg);
-	}
-	 25% {
-		 clip: rect(75px, 9999px, 35px, 0);
-		 transform: skew(0.64deg);
-	}
-	 30% {
-		 clip: rect(56px, 9999px, 97px, 0);
-		 transform: skew(0.09deg);
-	}
-	 35% {
-		 clip: rect(64px, 9999px, 16px, 0);
-		 transform: skew(0.76deg);
-	}
-	 40% {
-		 clip: rect(39px, 9999px, 61px, 0);
-		 transform: skew(0.69deg);
-	}
-	 45% {
-		 clip: rect(64px, 9999px, 82px, 0);
-		 transform: skew(0.33deg);
-	}
-	 50% {
-		 clip: rect(22px, 9999px, 34px, 0);
-		 transform: skew(0.58deg);
-	}
-	 55% {
-		 clip: rect(78px, 9999px, 41px, 0);
-		 transform: skew(0.8deg);
-	}
-	 60% {
-		 clip: rect(84px, 9999px, 23px, 0);
-		 transform: skew(0.12deg);
-	}
-	 65% {
-		 clip: rect(80px, 9999px, 15px, 0);
-		 transform: skew(0.91deg);
-	}
-	 70% {
-		 clip: rect(30px, 9999px, 94px, 0);
-		 transform: skew(0.9deg);
-	}
-	 75% {
-		 clip: rect(70px, 9999px, 61px, 0);
-		 transform: skew(0.5deg);
-	}
-	 80% {
-		 clip: rect(100px, 9999px, 78px, 0);
-		 transform: skew(0.78deg);
-	}
-	 85% {
-		 clip: rect(25px, 9999px, 90px, 0);
-		 transform: skew(0.47deg);
-	}
-	 90% {
-		 clip: rect(38px, 9999px, 89px, 0);
-		 transform: skew(0.69deg);
-	}
-	 95% {
-		 clip: rect(66px, 9999px, 12px, 0);
-		 transform: skew(0.12deg);
-	}
-	 100% {
-		 clip: rect(41px, 9999px, 18px, 0);
-		 transform: skew(0.44deg);
-	}
+.p2.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .2s;
 }
- @keyframes glitch-anim2 {
-	 0% {
-		 clip: rect(94px, 9999px, 82px, 0);
-		 transform: skew(0.37deg);
-	}
-	 5% {
-		 clip: rect(50px, 9999px, 17px, 0);
-		 transform: skew(0.86deg);
-	}
-	 10% {
-		 clip: rect(52px, 9999px, 18px, 0);
-		 transform: skew(0.93deg);
-	}
-	 15% {
-		 clip: rect(69px, 9999px, 93px, 0);
-		 transform: skew(0.71deg);
-	}
-	 20% {
-		 clip: rect(43px, 9999px, 48px, 0);
-		 transform: skew(0.95deg);
-	}
-	 25% {
-		 clip: rect(5px, 9999px, 54px, 0);
-		 transform: skew(0.57deg);
-	}
-	 30% {
-		 clip: rect(33px, 9999px, 53px, 0);
-		 transform: skew(0.65deg);
-	}
-	 35% {
-		 clip: rect(48px, 9999px, 37px, 0);
-		 transform: skew(0.57deg);
-	}
-	 40% {
-		 clip: rect(66px, 9999px, 1px, 0);
-		 transform: skew(0.65deg);
-	}
-	 45% {
-		 clip: rect(21px, 9999px, 35px, 0);
-		 transform: skew(0.88deg);
-	}
-	 50% {
-		 clip: rect(76px, 9999px, 14px, 0);
-		 transform: skew(0.37deg);
-	}
-	 55% {
-		 clip: rect(35px, 9999px, 12px, 0);
-		 transform: skew(0.34deg);
-	}
-	 60% {
-		 clip: rect(87px, 9999px, 71px, 0);
-		 transform: skew(0.59deg);
-	}
-	 65% {
-		 clip: rect(3px, 9999px, 86px, 0);
-		 transform: skew(0.79deg);
-	}
-	 70% {
-		 clip: rect(97px, 9999px, 5px, 0);
-		 transform: skew(0.49deg);
-	}
-	 75% {
-		 clip: rect(86px, 9999px, 84px, 0);
-		 transform: skew(1deg);
-	}
-	 80% {
-		 clip: rect(46px, 9999px, 100px, 0);
-		 transform: skew(0.36deg);
-	}
-	 85% {
-		 clip: rect(56px, 9999px, 97px, 0);
-		 transform: skew(0.85deg);
-	}
-	 90% {
-		 clip: rect(21px, 9999px, 60px, 0);
-		 transform: skew(0.62deg);
-	}
-	 95% {
-		 clip: rect(59px, 9999px, 40px, 0);
-		 transform: skew(0.42deg);
-	}
-	 100% {
-		 clip: rect(60px, 9999px, 60px, 0);
-		 transform: skew(0.79deg);
-	}
+.p2.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .3s;
 }
- @keyframes glitch-skew {
-	 0% {
-		 transform: skew(1deg);
-	}
-	 10% {
-		 transform: skew(4deg);
-	}
-	 20% {
-		 transform: skew(5deg);
-	}
-	 30% {
-		 transform: skew(-4deg);
-	}
-	 40% {
-		 transform: skew(-1deg);
-	}
-	 50% {
-		 transform: skew(0deg);
-	}
-	 60% {
-		 transform: skew(3deg);
-	}
-	 70% {
-		 transform: skew(-4deg);
-	}
-	 80% {
-		 transform: skew(4deg);
-	}
-	 90% {
-		 transform: skew(-1deg);
-	}
-	 100% {
-		 transform: skew(3deg);
-	}
+
+.p3 span {
+	opacity: 0;
 }
- 
+.p3.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+}
+.p3.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .3s;
+}
+.p3.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .6s;
+}
+.p3.on span:nth-of-type(4) {
+	opacity: 1;
+	transition: 0s 1.3s;
+}
+.p3.on span:nth-of-type(5) {
+	opacity: 1;
+	transition: 0s 1.5s;
+}
+.p3.on span:nth-of-type(6) {
+	opacity: 1;
+	transition: 0s 1.7s;
+}
+
+.p4 span {
+	opacity: 0;
+}
+.p4.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+}
+.p4.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .1s;
+}
+.p4.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .3s;
+}
+.p4.on span:nth-of-type(4) {
+	opacity: 1;
+	transition: 0s .6s;
+}
+.p4.on span:nth-of-type(5) {
+	opacity: 1;
+	transition: 0s 1.2s;
+}
+.p4.on span:nth-of-type(6) {
+	opacity: 1;
+	transition: 0s 1.6s;
+}
+.p4.on span:nth-of-type(7) {
+	opacity: 1;
+	transition: 0s 2.1s;
+}
+
+.p5 span {
+	opacity: 0;
+}
+.p5.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+}
+.p5.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .5s;
+}
+.p5.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .7s;
+}
+.p5.on span:nth-of-type(4) {
+	opacity: 1;
+	transition: 0s 1s;
+}
+.p5.on span:nth-of-type(5) {
+	opacity: 1;
+	transition: 0s 1.5s;
+}
+.p5.on span:nth-of-type(6) {
+	opacity: 1;
+	transition: 0s 1.9s;
+}
+.p5.on span:nth-of-type(7) {
+	opacity: 1;
+	transition: 0s 2.3s;
+}
+
+.p6 span {
+	opacity: 0;
+}
+.p6.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+}
+.p6.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .2s;
+}
+.p6.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .6s;
+}
+
+
