--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -1,14 +1,16 @@
 body {
 	background-color: black;
-	margin-top: 75px;
 	color: white;
 	overflow-x: hidden;
 }
 
 #video-placeholder{
-	width: 50%;
-	height: 100%;
+	width: 60%;
+	height: 500px;
 	padding: 0;
+	margin: 0 auto;
+	text-align: center;
+
 }
 
 
@@ -25,8 +27,7 @@ Feel free to adjust the defaults to your needs.
 	opacity: 0;
 	transition: .05s;
 	position:absolute;
-	left: 20%;
-	text-align: center;
+
 	
 }
 #closed-captions .on {
@@ -41,7 +42,6 @@ text-align: center;
 }
 
 .voice2{
-	
 	font-weight: bold;
 	font-size:20px;
 }
@@ -136,7 +136,6 @@ You probably want to change the styling.
 	color: white;
 	font-size: 1.6em;
 	letter-spacing: 0.5em;
-   /* Animation provies a slight random skew. Check bottom of doc for more information on how to random skew. */
 	animation: glitch-skew 1s infinite linear alternate-reverse;
 }
 .voice1::before {
@@ -148,9 +147,7 @@ You probably want to change the styling.
 	height: 100%;
 	left: 2px;
 	text-shadow: -2px 0 #ff00c1;
-   /* Creates an initial clip for our glitch. This works in a typical top,right,bottom,left fashion and creates a mask to only show a certain part of the glitch at a time. */
 	clip: rect(44px, 450px, 56px, 0);
-   /* Runs our glitch-anim defined below to run in a 5s loop, infinitely, with an alternating animation to keep things fresh. */
 	animation: glitch-anim 5s infinite linear alternate-reverse;
 }
 .voice1::after {
@@ -390,8 +387,3 @@ You probably want to change the styling.
 	100% {
 		box-shadow:  0px 0px 129px 200px rgba(255,0,0,0);
 }}
-
-#video-placeholder {
-	display: block;
-	width: 80vw;
-}
