--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -11,6 +11,7 @@ body {
 	padding: 0;
 	margin: 0 auto;
 	text-align: center;
+	
 }
 
 
@@ -57,25 +58,21 @@ The first paragraph, with extended timing for
 You probably want to change the styling.
 ********************************************** */
 
-
-/*.p0{
+.p0{
 	color:#ffffff;
 }
 .p0 span {
 	opacity: 0;
-	font-family: brenner;
+	
 }
 .p0.on span:first-of-type {
 	opacity: 1;
 	transition: 0s;
-	font-weight: 200;
-
 }
 .p0.on span:nth-of-type(2) {
 	opacity: 1;
 	transition: 0s .4s;
-	margin-right: -.25em;
-	font-weight: 400;
+
 }
 .p0.on span:nth-of-type(3) {
 	opacity: 1;
@@ -86,48 +83,44 @@ You probably want to change the styling.
 .p0.on span:nth-of-type(4) {
 	opacity: 1;
 	transition: 0s .7s;
-	margin-right: -.25em;
-	font-weight: 800;
+
 }
 .p0.on span:nth-of-type(5) {
 	opacity: 1;
 	transition: 0s 1.1s;
-	margin-right: -.25em;
-	font-family: "brenner sans";
+
 }
 .p0.on span:nth-of-type(6) {
 	opacity: 1;
 	transition: 0s 1.4s;
-	margin-right: -.25em;
-	font-family: "brenner display";
+
 }
 .p0.on span:nth-of-type(7) {
 	opacity: 1;
 	transition: 0s 1.7s;
 	margin-right: -.25em;
-	font-family: "brenner script";
 }
 .p0.on span:nth-of-type(8) {
 	opacity: 1;
 	transition: 0s 2s;
-	font-family: "brenner script";
+
 }
 .p0.on span:nth-of-type(9) {
 	opacity: 1;
 	transition: 0s 3s;
-	font-family: "brenner Sans condensed";
+	
 }
 .p0.on span:nth-of-type(10) {
 	opacity: 1;
 	transition: 0s 3.2s;
-	font-family: "brenner mono";
+
 }
 .p0.on span:nth-of-type(11) {
 	opacity: 1;
 	transition: 0s 3.7s;
-	font-family: "brenner slab";
+
 }
-*/
+
 
 
 
@@ -376,7 +369,6 @@ You probably want to change the styling.
 .sound0 {
 	animation: iframe-skew 3s  linear alternate-reverse;
 }
-/* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
 
 @keyframes iframe-skew {
 	0% {
@@ -389,6 +381,7 @@ You probably want to change the styling.
 		transform: skew(2deg);
    }
 	30% {
+		
 		transform: skew(-2deg);
    }
 	40% {
@@ -415,19 +408,227 @@ You probably want to change the styling.
 }
 
 
-.sound1 {
+.sound1{
 	animation-duration: 1s;
 	animation-name: alarm;
 	animation-timing-function: ease-in;
+
 }
 @keyframes alarm {
 	0% {
-		background: linear-gradient(to left, #333, #333 50%, #eee 75%, #333 75%);
+		background-color:  black;}
+	1% {
+		background: linear-gradient(90deg, rgba(0,0,0,1) 000%, rgba(0,0,0,1) 24%, rgba(121,9,9,1) 24%, rgba(0,0,0,1) 100%);
+		filter: blur(3.2px) brightness(1.4) contrast(15);
 	}
-	50% {
-		background: linear-gradient(to left, #333, #333 30%, #c42d2d 60%, #333 80%);
+	40% {
+		background: linear-gradient(90deg, rgba(255,0,0,1) 000%, rgba(0,0,0,1) 75%, rgba(121,9,9,1) 75%);
+		filter: blur(3.2px) brightness(1.4) contrast(15);
 	}
+	50%{
+		background: linear-gradient(90deg, rgba(0,0,0,1) 000%, rgba(0,0,0,1) 48%, rgba(121,9,9,1) 48%);
+		}
 
 	100% {
 		background-color:  black;
-}}
+}
+}
+
+.sound2{
+	animation-duration: 1s;
+	animation-name: alarm2;
+	animation-timing-function: ease-in;
+}
+
+@keyframes alarm2{
+	0% {
+		background-color:  black;}
+	1% {
+		background: linear-gradient(to left, #000, #000 50%, #912626 75%, #000 75%);
+		transform: rotate(20deg);;
+	}
+	40% {
+		background: linear-gradient(to left, #000, #000 65%, #912626 70%, #000 80%);
+	}
+	50%{
+		background: linear-gradient(to right, #000, #000 50%, #912626 70%, #000 80%);
+		
+		}
+
+	100% {
+		background-color:  black;
+		transform: rotate(0deg);
+
+}
+}
+
+
+
+
+
+.sound4 iframe{
+	width: 100%;
+	height: 1px;
+	animation: scan 1s ease-in;
+	
+  }
+  @keyframes scan {
+	0% {
+		box-shadow: 0px 0px 8px 10px rgba(170, 11, 23, 0.49);
+		top: 50%;
+		transform: translateY(0px);
+	  }  
+	  25% {
+		box-shadow: 0px 6px 8px 10px rgba(170, 11, 23, 0.49);
+		top: 5px;
+	  }
+	  75% {
+		box-shadow: 0px 0px 0px 0px rgba(170, 11, 23, 0.49);
+		top: 98%;
+		transform: translateY(200px);
+	  }
+	  100% {
+		opacity:0;
+		height: 0px;
+		
+	  }
+  }
+
+
+
+
+
+
+
+.daimonds{
+	display: none;
+}
+
+
+  
+  .sound4 .daimonds {
+	display:block;
+	position: fixed;
+	top: 248px;
+	right: -200px;
+	bottom: -200px;
+	left: -200px;
+	overflow: hidden;
+	filter: blur(3.2px) brightness(1.4) contrast(15);
+	z-index: -1;
+  }
+  .sound4 .daimonds::after {
+	content: "";
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 100px;
+	height: 100px;
+	background: black;
+	border-radius: 50%;
+	box-shadow: 0px 0px 0px 0px rgba(170, 11, 23, 0.49);
+	box-shadow: 0 0 10px black, 0 0 20px black, 0 0 40px black, 0 0 70px black, 0 0 100px black, 0 0 140px black, 0 0 180px black, 0 0 230px black;
+	transform: translateX(-50%) translateY(-50%);
+  }
+  
+  .diamond-lines {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+  }
+  .diamond-lines::before, .diamond-lines::after {
+	content: "";
+	position: fixed;
+	top: 50%;
+	display: block;
+	width: 100%;
+	height: 0;
+	border: 1px solid #fff;
+	box-shadow: 0 0 2px #45c0ff, 0 0 5px #45c0ff;
+	animation-name: glow;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+  }
+  .diamond-lines::after {
+	top: 0;
+	left: 50%;
+	height: 100%;
+	width: 0;
+  }
+  .diamond-lines div {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	width: 1000px;
+	height: 500px;
+	border: 6px solid #fff;
+	transform: translateX(-50%) translateY(-50%) rotate(90deg) skew(75deg);
+	animation-duration: 20s;
+	animation-name: move;
+	animation-timing-function: cubic-bezier(0.06, 0.22, 0.19, 0.99);
+	animation-iteration-count: infinite;
+	box-shadow: 0 0 5px #45c0ff, 0 0 15px #45c0ff;
+	opacity: 0;
+  }
+  .diamond-lines div:nth-child(1) {
+	animation-delay: 2s;
+  }
+  .diamond-lines div:nth-child(2) {
+	animation-delay: 4s;
+  }
+  .diamond-lines div:nth-child(3) {
+	animation-delay: 6s;
+  }
+  .diamond-lines div:nth-child(4) {
+	animation-delay: 8s;
+  }
+  .diamond-lines div:nth-child(5) {
+	animation-delay: 10s;
+  }
+  .diamond-lines div:nth-child(6) {
+	animation-delay: 12s;
+  }
+  .diamond-lines div:nth-child(7) {
+	animation-delay: 14s;
+  }
+  .diamond-lines div:nth-child(8) {
+	animation-delay: 16s;
+  }
+  .diamond-lines div:nth-child(9) {
+	animation-delay: 18s;
+  }
+  .diamond-lines div:nth-child(10) {
+	animation-delay: 20s;
+  }
+  
+  @keyframes move {
+	0% {
+	  width: 1000px;
+	  height: 1000px;
+	  opacity: 0;
+	  transform: translateX(-50%) translateY(-50%) rotate(0deg) skew(70deg);
+	}
+	15% {
+	  opacity: 1;
+	}
+	40% {
+	  opacity: 1;
+	}
+	100% {
+	  width: 0;
+	  height: 0;
+	  border-width: 1px;
+	  opacity: 0;
+	  transform: translateX(-50%) translateY(-50%) rotate(270deg) skew(10deg);
+	}
+  }
+  @keyframes glow {
+	0% {
+	  border-width: 1px;
+	}
+	100% {
+	  border-width: 5px;
+	}
+  }
