--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -470,8 +470,8 @@ You probably want to change the styling.
 	width: 100%;
 	height: 1px;
 	animation: scan 1s ease-in;
-	
   }
+  
   @keyframes scan {
 	0% {
 		box-shadow: 0px 0px 8px 10px rgba(170, 11, 23, 0.49);
@@ -615,5 +615,6 @@ You probably want to change the styling.
 	}
 	100% {
 	  border-width: 5px;
+	  display: none;
 	}
   }
