--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -462,6 +462,36 @@ You probably want to change the styling.
 }
 }
 
+.sound3 #curtain {
+	display: block;
+  }
+  #curtain {
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: red;
+	box-shadow: 0 0 50px 3px red;
+	animation: scan 2s linear;
+	display: none;
+  }
+  @keyframes scan {
+	0% {
+	  top: 0;
+	  
+	}
+	50% {
+	  top: 100%;
+	  opacity: 1;
+	}
+  51% {
+	  opacity: 1;
+	}
+	52%{
+		opacity: 0;
+	}
+}
+  
+
 
 
 
@@ -500,7 +530,7 @@ You probably want to change the styling.
 
 
 
-.daimonds{
+/*.daimonds{
 	display: none;
 }
 
@@ -618,3 +648,4 @@ You probably want to change the styling.
 	  display: none;
 	}
   }
+*/
