--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -468,7 +468,7 @@ You probably want to change the styling.
   #curtain {
 	position: absolute;
 	width: 100%;
-	height: 2px;
+	height: 4px;
 	background-color: red;
 	box-shadow: 0 0 50px 3px red;
 	animation: scan 2s linear;
@@ -530,13 +530,13 @@ You probably want to change the styling.
 
 
 
-/*.daimonds{
+.daimonds{
 	display: none;
 }
 
 
   
-  .sound4 .daimonds {
+  .sound3 .daimonds {
 	display:block;
 	position: fixed;
 	top: 248px;
@@ -648,4 +648,3 @@ You probably want to change the styling.
 	  display: none;
 	}
   }
-*/
