--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -463,32 +463,45 @@ You probably want to change the styling.
 }
 
 .sound3 #curtain {
-	display: block;
+	animation: scan 2s linear ;
+
   }
-  #curtain {
+
+#curtain {
 	position: absolute;
 	width: 100%;
 	height: 4px;
 	background-color: red;
-	box-shadow: 0 0 50px 3px red;
-	animation: scan 2s linear;
-	display: none;
+	/* animation: scan 2s linear; */
+	/*display: none;*/
+	opacity: 0;
   }
+
   @keyframes scan {
 	0% {
 	  top: 0;
-	  
+	  opacity: 1;
 	}
 	50% {
 	  top: 100%;
 	  opacity: 1;
+      box-shadow: 0px -64px 300px 53px rgba(255,0,0,1);
 	}
-  51% {
-	  opacity: 1;
+	51%
+	{
+		box-shadow: 0px 64px 300px 53px rgba(255,0,0,1);
 	}
-	52%{
-		opacity: 0;
+
+	85%{
+		opacity: 1;
 	}
+
+    100% {
+	  top: 0%;
+	  opacity: 0;
+	  
+	}
+
 }
   
 
@@ -499,10 +512,10 @@ You probably want to change the styling.
 .sound4 iframe{
 	width: 100%;
 	height: 1px;
-	animation: scan 1s ease-in;
+	animation: laser 1s ease-in;
   }
   
-  @keyframes scan {
+  @keyframes laser {
 	0% {
 		box-shadow: 0px 0px 8px 10px rgba(170, 11, 23, 0.49);
 		top: 50%;
@@ -520,7 +533,6 @@ You probably want to change the styling.
 	  100% {
 		opacity:0;
 		height: 0px;
-		
 	  }
   }
 
@@ -530,7 +542,7 @@ You probably want to change the styling.
 
 
 
-.daimonds{
+/*.daimonds{
 	display: none;
 }
 
@@ -630,13 +642,14 @@ You probably want to change the styling.
 	}
 	40% {
 	  opacity: 1;
+	  transform: translateX(-50%) translateY(-50%) rotate(270deg) skew(10deg);
 	}
 	100% {
 	  width: 0;
 	  height: 0;
 	  border-width: 1px;
 	  opacity: 0;
-	  transform: translateX(-50%) translateY(-50%) rotate(270deg) skew(10deg);
+	  
 	}
   }
   @keyframes glow {
@@ -648,3 +661,4 @@ You probably want to change the styling.
 	  display: none;
 	}
   }
+*/
