--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -397,15 +397,28 @@ You probably want to change the styling.
 	
 
 
+.voice3 iframe{
+	animation-duration: 2s;
+	animation-name: fokoff;
+	animation-timing-function: ease-in;
+}
+
+@keyframes fokoff{
+	0%{
+		filter: blur(3.2px) brightness() contrast(15);
+	}
+	100%{
+		filter: blur(3.2px) brightness(1.4) contrast(15);
+	}
+
+}
 
 
 
 
 
 
-
-
-.sound0 {
+#sound0 {
 	animation: iframe-skew 3s  linear alternate-reverse;
 }
 
@@ -473,7 +486,7 @@ You probably want to change the styling.
 }
 }
 
-.sound2{
+.sound2, .sound7{
 	animation-duration: 1s;
 	animation-name: alarm2;
 	animation-timing-function: ease-in;
@@ -501,10 +514,12 @@ You probably want to change the styling.
 }
 }
 
-.sound3 #curtain {
+.sound3 #curtain{
 	animation: scan 2s linear ;
 
   }
+
+
 
 #curtain {
 	position: absolute;
@@ -542,6 +557,7 @@ You probably want to change the styling.
 	}
 
 }
+
   
 
 
@@ -570,8 +586,6 @@ You probably want to change the styling.
 		transform: translateY(200px);
 	  }
 	  100% {
-		opacity:0;
-		height: 0px;
 	  }
   }
 
@@ -579,139 +593,47 @@ You probably want to change the styling.
 
 
 
-/*.daimonds{
-	display: none;
+
+
+.sound5{
+	animation-duration: 1s;
+	animation-name: alarm3;
+	animation-timing-function: ease-in;
 }
 
-
-  
-  .sound4 .daimonds {
-	display:block;
-	position: fixed;
-	top: 248px;
-	right: -200px;
-	bottom: -200px;
-	left: -200px;
-	overflow: hidden;
-	filter: blur(3.2px) brightness(1.4) contrast(15);
-	z-index: -1;
-  }
-  .sound4 .daimonds::after {
-	content: "";
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	width: 100px;
-	height: 100px;
-	background: black;
-	border-radius: 50%;
-	box-shadow: 0px 0px 0px 0px rgba(170, 11, 23, 0.49);
-	box-shadow: 0 0 10px black, 0 0 20px black, 0 0 40px black, 0 0 70px black, 0 0 100px black, 0 0 140px black, 0 0 180px black, 0 0 230px black;
-	transform: translateX(-50%) translateY(-50%);
-  }
-  
-  .diamond-lines {
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-  }
-  .diamond-lines::before, .diamond-lines::after {
-	content: "";
-	position: fixed;
-	top: 50%;
-	display: block;
-	width: 100%;
-	height: 0;
-	border: 1px solid #fff;
-	box-shadow: 0 0 2px #45c0ff, 0 0 5px #45c0ff;
-	animation-name: glow;
-	animation-timing-function: linear;
-	animation-iteration-count: infinite;
-  }
-  .diamond-lines::after {
-	top: 0;
-	left: 50%;
-	height: 100%;
-	width: 0;
-  }
-  .diamond-lines div {
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	width: 1000px;
-	height: 500px;
-	border: 6px solid #fff;
-	transform: translateX(-50%) translateY(-50%) rotate(90deg) skew(75deg);
-	animation-duration: 5s;
-	animation-name: move;
-	animation-timing-function: cubic-bezier(0.06, 0.22, 0.19, 0.99);
-	animation-iteration-count: infinite;
-	box-shadow: 0 0 5px #45c0ff, 0 0 15px #45c0ff;
-	opacity: 0;
-  }
-  .diamond-lines div:nth-child(1) {
-	animation-delay: 2s;
-  }
-  .diamond-lines div:nth-child(2) {
-	animation-delay: 4s;
-  }
-  .diamond-lines div:nth-child(3) {
-	animation-delay: 6s;
-  }
-  .diamond-lines div:nth-child(4) {
-	animation-delay: 8s;
-  }
-  .diamond-lines div:nth-child(5) {
-	animation-delay: 10s;
-  }
-  
-  @keyframes move {
+@keyframes alarm3{
 	0% {
-	  width: 1000px;
-	  height: 1000px;
-	  opacity: 0;
-	  transform: translateX(-50%) translateY(-50%) rotate(0deg) skew(70deg);
-	}
-	15% {
-	  opacity: 1;
+		background-color:  black;}
+	1% {
+		background: linear-gradient(to left, #000, #000 50%, #912626 75%, #000 75%);
+		transform: rotate(20deg);;
 	}
 	40% {
-	  opacity: 1;
-	  transform: translateX(-50%) translateY(-50%) rotate(270deg) skew(10deg);
+		background: linear-gradient(to left, #000, #000 65%, #912626 70%, #000 80%);
 	}
+	50%{
+		background: linear-gradient(to right, #000, #000 50%, #912626 70%, #000 80%);
+		
+		}
 	100% {
-	  width: 0;
-	  height: 0;
-	  border-width: 1px;
-	  opacity: 0;
-	  
-	}
-  }
-  @keyframes glow {
-	0% {
-	  border-width: 1px;
-	}
-	100% {
-	  border-width: 5px;
-	  display: none;
-	}
-  }
+		background-color:  black;
+		transform: rotate(0deg);
 
-*/
+}
+}
 
-.sound6 iframe{
+.sound6  iframe{
 	width: 100%;
 	height: 1px;
-	animation: laser 1s ease-in;
+	animation: laser1 1s ease-in;
   }
   
-  @keyframes laser {
+  @keyframes laser1 {
 	0% {
 		box-shadow: 0px 0px 8px 10px rgba(170, 11, 23, 0.49);
 		top: 50%;
 		transform: translateY(0px);
+		filter: blur(3.2px) brightness() contrast(15);
 	  }  
 	  25% {
 		box-shadow: 0px 6px 8px 10px rgba(170, 11, 23, 0.49);
@@ -721,9 +643,78 @@ You probably want to change the styling.
 		box-shadow: 0px 0px 0px 0px rgba(170, 11, 23, 0.49);
 		top: 98%;
 		transform: translateY(200px);
+		filter: blur(3.2px) brightness() contrast(15);
 	  }
 	  100% {
-		opacity:0;
-		height: 0px;
+	  }
+  }
+
+  .sound7{
+	animation-duration: 1s;
+	animation-name: Alarm5;
+	animation-timing-function: ease-in;
+}
+
+@keyframes alarm5{
+	0% {
+		background-color:  black;}
+	1% {
+		background: linear-gradient(to left, #000, #000 50%, #912626 75%, #000 75%);
+		transform: rotate(20deg);;
+	}
+	40% {
+		background: linear-gradient(to left, #000, #000 65%, #912626 70%, #000 80%);
+	}
+	50%{
+		background: linear-gradient(to right, #000, #000 50%, #912626 70%, #000 80%);
+		
+		}
+	100% {
+		background-color:  black;
+		transform: rotate(0deg);
+
+}
+}
+
+.sound8  iframe{
+	width: 100%;
+	height: 1px;
+	animation: laser2 1s ease-in;
+  }
+  
+  @keyframes laser2 {
+	0% {
+
+		filter: blur(3.2px) brightness() contrast(15);
+	  }  
+	  25% {
+		
+	  }
+	  75% {
+		filter: blur(3.2px) brightness() contrast(15);
+	  }
+	  100% {
+	  }
+  }
+
+
+
+  .sound9  iframe{
+	width: 100%;
+	height: 1px;
+	animation: laser3 25s linear;
+  }
+  
+  @keyframes laser3 {
+	0% {
+
+		filter: blur(0px) brightness() contrast(0);
+	  }  
+
+	  75% {
+		
+	  }
+	  100% {
+		filter: blur(5.2px) brightness(1.3) contrast(15);
 	  }
   }
