--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -121,6 +121,15 @@ You probably want to change the styling.
 
 }
 
+.p1.on span:first-of-type {
+	font-weight: 800;
+	text-transform: uppercase;
+	font-family: Brenner sans condensed;
+	letter-spacing: 2px;
+	color: whitesmoke;
+	font-size: 1.2em;
+}
+
 
 
 
@@ -685,7 +694,7 @@ You probably want to change the styling.
   @keyframes laser2 {
 	0% {
 
-		filter: blur(3.2px) brightness() contrast(15);
+		
 	  }  
 	  25% {
 		
@@ -702,19 +711,74 @@ You probably want to change the styling.
   .sound9  iframe{
 	width: 100%;
 	height: 1px;
-	animation: laser3 25s linear;
+	animation: laser3 42s linear;
+	/* filter:brightness(108%) contrast(153%) hue-rotate(17deg); */
   }
-  
-  @keyframes laser3 {
-	0% {
+	  
+	  @keyframes laser3 {
+		0% {
+			transform: skew(0deg) ;
+			/* background-image: linear-gradient(180deg, #4C0000 0%, #BC0000 21%, #FF0000 47%, #920000 82%, #000000 100%); */
+		  }  
+		1% {
 
-		filter: blur(0px) brightness() contrast(0);
-	  }  
-
-	  75% {
-		
-	  }
-	  100% {
-		filter: blur(5.2px) brightness(1.3) contrast(15);
-	  }
+			transform: skew(2deg);
+	   }	
+	   10% {
+		transform: skew(-2deg);
+   }	
+   20% {
+	transform: skew(2deg);
+}	
+30% {
+transform: skew(-2deg);
+}	
+40% {
+	transform: skew(2deg);
+}	
+50% {
+	
+transform: skew(-2deg);
+}	
+60% {
+	transform: skew(2deg);
+}	
+70% {
+	filter:brightness(140%) contrast(150%) hue-rotate(32deg);
+	box-shadow: 0px 0px 300px -111px rgba(255,255,255,1);
+transform: skew(-2deg);
+}	
+80% {
+	transform: skew(2deg);
+}	
+90% {
+transform: skew(-2deg);
+}	
+99% {
+	transform: skew(0deg) scale(2);
+	filter:brightness(140%) contrast(200%) hue-rotate(32deg);
+	box-shadow: 0px 0px 300px 88px rgba(255,255,255,1);
+	/* background-image: linear-gradient(180deg, #4C0000 0%, #BC0000 21%, #FF0000 47%, #920000 82%, #000000 100%); */
   }
+100% {
+}	
+		  
+	  }
+
+.sound5 #closed-captions:before{
+	content: "[Electrische trilling gaat op en neer]";
+	color:  yellow;
+    animation: inputtext 2s forwards;
+}
+
+@keyframes inputtext{
+    0% {
+        opacity: 1;
+    }
+    99% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
